# gen_bootstrap

./: .clineignore  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Procfile  README.md  count_tokens.ps1  main.py  pyproject.toml  template.env  test_client.py
adk/: __init__.py  adk-docs.md  agent.py
cli/: __init__.py  main.py  monitoring_cli.py  prompts_cli.py  secrets_cli.py  tools_cli.py
config/: __init__.py  settings.py
docs/: CONTRIBUTING.md  design_principles.md  glossary.md  troubleshooting.md
docs/adrs/: 0001-use-poetry-for-package-management.md  0002-deploy-on-cloud-run.md  0003-use-vertex-ai-prompt-classes.md  0004-use-typer-click-for-cli.md  0005-integrate-cloud-logging-trace.md  0006-use-pytest-for-testing.md  0007-integrate-google-secret-manager.md  0008-use-pre-commit-hooks.md  0009-use-firestore-for-state.md  0010-automate-gcp-provisioning-with-gcloud.md  0011-use-fastapi-uvicorn-for-backend.md  0012-direct-inference-access-to-gemini.md  0013-handle-token-management-with-token-count-trim.md  0014-implement-tool-use-with-tools-directory.md  0015-use-pytest-mock-for-testing.md  0016-use-weave-for-optional-observability.md  0017-use-cloud-monitoring-alerting.md  0018-use-jupyter-notebooks-for-experimentation.md  0019-group-features-into-phases.md  0020-use-evaluation-framework.md  0021-use-poetry-for-packaging.md  0022-use-cloud-build-and-buildkit-for-container-builds.md  0023-use-gradio-for-test-client.md  0024-set-cli-script-alias-to-lunagen.md  0025-add-python-a2a-dependency.md  0026-add-fastmcp-dependency-and-update-typer.md  0027-use-buildpacks-for-deployment.md  0028-set-cli-script-alias-to-gen-bootstrap.md
docs/architecture/: ascii_architecture.txt  component_diagram.md  deployment_diagram.md
docs/features/: cloud_run_deployment.md  evaluation_framework.md  logging_tracing.md  monitoring_alerting.md  optional_weave_integration.md  prompt_management.md  scratch.py  secret_management.md  testing_framework.md  token_management.md  tool_use.md
docs/guides/: manual_gcp_setup.md
docs/maintenance/: maintenance_strategy.md
docs/plan/: detailed_plan.md  executive_overview.md
docs/tutorials/: 01-getting-started.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/adk/: test_agent.py
tests/cli/: __init__.py  test_main_cli.py  test_prompts_cli.py  test_secrets_cli.py  test_tools_cli.py
tests/tools/: test_example_tool.py
tests/utils/: test_token_utils.py
tools/: __init__.py  example_tool.py
utils/: __init__.py  gcp_utils.py  logging_utils.py  token_utils.py
