[tool.poetry]
name = "gen-bootstrap"
version = "0.1.0"
description = "A scaffold and CLI for generative AI projects using the Google ADK on GCP."
authors = ["J3brns <julian.burns50+j3brns@gmail.com>"]
readme = "README.md"

packages = [
    { include = "cli" },
    { include = "adk" },
    { include = "config" },
    { include = "tools" },
    { include = "utils" },
    { include = "main.py" },
    { include = "test_client.py" },
    { include = "__init__.py" } # Include the root __init__.py
]

[tool.poetry.scripts]
"gen-bootstrap" = "cli.main:app" # Path updated for flat layout

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
google-cloud-aiplatform = "^1.49.0"
google-cloud-logging = "^3.8.0"
google-cloud-trace = "^1.10.0"
google-cloud-secret-manager = "^2.16.2"
typer = "^0.12.3" # Using a version compatible with Gradio, without extras
# rich dependency removed to see if it resolves help formatting error
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.34.0"} # Updated for google-adk compatibility
ttok = { git = "https://github.com/j3brns/token_count_trim.git" }
gradio = "^5.25.2"
python-dotenv = "^1.1.0"
google-adk = "^0.5.0"
PyYAML = "^6.0" # For parsing prompt definition files

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0" # Added for test coverage reporting
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
nbstripout = "^0.6.1"
jupyterlab = "^4.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
